// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HouseholdMembersTable > should handle empty household members list 1`] = `
<div>
  <div
    class="sc-dntSTA gIfChW"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 sc-kvnevz blLxTe css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiTableContainer-root sc-fbQrwq css-70zvr5-MuiTableContainer-root"
      >
        <div
          class="sc-gGKoUb PVWQI MuiBox-root css-0"
        >
          <div
            class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-16wdp7y-MuiToolbar-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-15aaxeb-MuiTypography-root"
              data-cy="table-title"
            >
              Household Members
            </h6>
          </div>
          <div
            class="sc-gGKoUb PVWQI MuiBox-root css-1ruxp1v"
          />
        </div>
        <table
          class="MuiTable-root sc-dFVmKS sc-hwddKA dlFQiS eLRtlq css-14k3lwa-MuiTable-root"
        >
          <thead
            class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-1o8lslm-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual ID
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Status
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Relationship to HoH
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-to33az-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Date of Birth
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Gender
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="MuiTablePagination-root css-7mt0f-MuiTablePagination-root"
        data-cy="table-pagination"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-nphfye-MuiToolbar-root-MuiTablePagination-toolbar"
        >
          <div
            class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer"
          />
          <p
            class="MuiTablePagination-selectLabel css-s09cke-MuiTablePagination-selectLabel"
            id="«ri»"
          >
            Rows per page:
          </p>
          <div
            class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-oegngy-MuiInputBase-root-MuiTablePagination-select"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="«ri» «rh»"
              class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-18zjd9i-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input"
              id="«rh»"
              role="combobox"
              tabindex="0"
            >
              5
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="5"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            class="MuiTablePagination-displayedRows css-11cfq65-MuiTablePagination-displayedRows"
          >
            1–5 of more than 5
          </p>
          <div
            class="MuiBox-root css-nkn1dz"
          >
            <button
              aria-label="first page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="FirstPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                />
              </svg>
            </button>
            <button
              aria-label="previous page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="next page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="last page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LastPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HouseholdMembersTable > should render HouseholdMembersTable correctly 1`] = `
<div>
  <div
    class="sc-dntSTA gIfChW"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 sc-kvnevz blLxTe css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiTableContainer-root sc-fbQrwq css-70zvr5-MuiTableContainer-root"
      >
        <div
          class="sc-gGKoUb PVWQI MuiBox-root css-0"
        >
          <div
            class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-16wdp7y-MuiToolbar-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-15aaxeb-MuiTypography-root"
              data-cy="table-title"
            >
              Household Members
            </h6>
          </div>
          <div
            class="sc-gGKoUb PVWQI MuiBox-root css-1ruxp1v"
          />
        </div>
        <table
          class="MuiTable-root sc-dFVmKS sc-hwddKA dlFQiS eLRtlq css-14k3lwa-MuiTable-root"
        >
          <thead
            class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-1o8lslm-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual ID
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Status
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Relationship to HoH
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-to33az-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Date of Birth
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Gender
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="MuiTablePagination-root css-7mt0f-MuiTablePagination-root"
        data-cy="table-pagination"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-nphfye-MuiToolbar-root-MuiTablePagination-toolbar"
        >
          <div
            class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer"
          />
          <p
            class="MuiTablePagination-selectLabel css-s09cke-MuiTablePagination-selectLabel"
            id="«r2»"
          >
            Rows per page:
          </p>
          <div
            class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-oegngy-MuiInputBase-root-MuiTablePagination-select"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="«r2» «r1»"
              class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-18zjd9i-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input"
              id="«r1»"
              role="combobox"
              tabindex="0"
            >
              5
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="5"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            class="MuiTablePagination-displayedRows css-11cfq65-MuiTablePagination-displayedRows"
          >
            1–5 of more than 5
          </p>
          <div
            class="MuiBox-root css-nkn1dz"
          >
            <button
              aria-label="first page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="FirstPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                />
              </svg>
            </button>
            <button
              aria-label="previous page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="next page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="last page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LastPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HouseholdMembersTable > should render multiple household members with different relationships 1`] = `
<div>
  <div
    class="sc-dntSTA gIfChW"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 sc-kvnevz blLxTe css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiTableContainer-root sc-fbQrwq css-70zvr5-MuiTableContainer-root"
      >
        <div
          class="sc-gGKoUb PVWQI MuiBox-root css-0"
        >
          <div
            class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-16wdp7y-MuiToolbar-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-15aaxeb-MuiTypography-root"
              data-cy="table-title"
            >
              Household Members
            </h6>
          </div>
          <div
            class="sc-gGKoUb PVWQI MuiBox-root css-1ruxp1v"
          />
        </div>
        <table
          class="MuiTable-root sc-dFVmKS sc-hwddKA dlFQiS eLRtlq css-14k3lwa-MuiTable-root"
        >
          <thead
            class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-1o8lslm-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual ID
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Individual
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Status
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Relationship to HoH
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-to33az-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Date of Birth
                </span>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1e9a4b0-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="sc-kcLKEh iUdHLq"
                  data-cy="table-label"
                >
                  Gender
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
            <tr
              class="MuiTableRow-root sc-kCuUfV fjhOdM css-1o8lslm-MuiTableRow-root"
              data-cy="table-row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium sc-dNdcvo lhzKhu css-1dc80h3-MuiTableCell-root"
                colspan="6"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3sr0vz-MuiSkeleton-root"
                  style="width: 100%; height: 70px;"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="MuiTablePagination-root css-7mt0f-MuiTablePagination-root"
        data-cy="table-pagination"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-nphfye-MuiToolbar-root-MuiTablePagination-toolbar"
        >
          <div
            class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer"
          />
          <p
            class="MuiTablePagination-selectLabel css-s09cke-MuiTablePagination-selectLabel"
            id="«ra»"
          >
            Rows per page:
          </p>
          <div
            class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-oegngy-MuiInputBase-root-MuiTablePagination-select"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="«ra» «r9»"
              class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-18zjd9i-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input"
              id="«r9»"
              role="combobox"
              tabindex="0"
            >
              5
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="5"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            class="MuiTablePagination-displayedRows css-11cfq65-MuiTablePagination-displayedRows"
          >
            1–5 of more than 5
          </p>
          <div
            class="MuiBox-root css-nkn1dz"
          >
            <button
              aria-label="first page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="FirstPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                />
              </svg>
            </button>
            <button
              aria-label="previous page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="next page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
                />
              </svg>
            </button>
            <button
              aria-label="last page"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LastPageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
